[project]
name = "hnlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Astle Dsa", email = "astledsa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hnswlib>=0.8.0",
    "mlx>=0.23.1",
    "numpy>=2.2.6",
    "pydantic>=2.11.4",
    "torch>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Python"]

[tool.hatch.build.targets.editable]
packages = ["src/Python"]
